fix: hide scrollbar and fix container padding

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,18 @@
 
 html,
 body {
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
+}
+
+html,
+body {
   height: 100%;
 }
 
@@ -142,6 +154,7 @@ hr::before {
 .landing-container {
   width: 100%;
   height: 100%;
+  padding-inline: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -161,7 +174,7 @@ hr::before {
   width: 100%;
   max-width: 60rem;
   margin: 0 auto;
-  padding: 4rem 0;
+  padding: 4rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
